namespace RobotsInc.Inspections.API.I;

public enum ChargingType
{
    MANUAL_BATTERY_SWAP = 1,

    AUTOMATIC_BATTERY_SWAP,

    AUTOMATIC_CHARGING
}
