namespace RobotsInc.Inspections.API.I;

public enum ImportanceLevel
{
    LOW = 1,

    MEDIUM,

    HIGH
}
