namespace RobotsInc.Inspections.API.I;

public enum InspectionState
{
    PLANNED = 1,

    IN_PROGRESS,

    EXECUTED,

    REPORTED
}
