namespace RobotsInc.Inspections.API.I;

public enum NavigationType
{
    WIRED = 1,

    GUIDE_TAPE,

    LASER
}
