namespace RobotsInc.Inspections.API.I;

public enum RobotType
{
    ARTICULATED_ROBOT = 1,

    AUTOMATED_GUIDED_VEHICLE
}
